testdata/golden/sema/valid/directives/stdlib_time_directive/main.fmt
// Test: time directive module
// Expected: No errors
import stdlib/directives/time;

/// time:
/// time.profile_fn("compute", 10, compute);

fn compute() -> nothing { return nothing; }
