testdata/golden/sema/invalid/entrypoint/mode_unknown.fmt
// Test: @entrypoint with unknown mode is invalid
// Expected: SEM3121
@entrypoint("foobar")
fn main() -> int {
    return 0;
}
